hphp/hack/test/typecheck/foreach_vector.php.exp
File "foreach_vector.php", line 21, characters 10-13:
Typing error (Typing[4110])
File "foreach_vector.php", line 21, characters 10-13:
This is a num (int/float) because this is used in an arithmetic operation
File "foreach_vector.php", line 18, characters 19-21:
It is incompatible with an object of type Foo
File "builtins.hhi", line 15, characters 47-48:
  via this generic Tv
File "builtins.hhi", line 12, characters 55-56:
  via this generic Tv
File "builtins.hhi", line 9, characters 64-65:
  via this generic Tv
File "builtins.hhi", line 6, characters 58-59:
  via this generic Tv
